# TokenParser

./: CMakeLists.txt  README.md
report/: Cppcheck.xml
src/: BasicGraph.h  Initialize.cpp  Initialize.h  RegularExpressionParser.cpp  RegularExpressionParser.h  TokenParser.cpp  TokenParser.h  main.cpp
test/: GraphTest.cpp  RegularExpressionParserTest.cpp  SequenceTest.cpp  TokenParserTest.cpp
